--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=JetBrains+Mono');
+
 :root {
     --color-bg: #282c34;
     --color-fg: #c678dd;
